# C_programming

./: .gitignore  send_repo_to_github.bat
11_universal_code/Lesson_project/serial_example_win_linux/serial_example/: CMakeLists.txt
11_universal_code/Lesson_project/serial_example_win_linux/serial_example/src/: main.c  serial.c  serial.h  serial_linux.c
All_source_codes/All_source_codes/VarAddress/: .cproject  .project
All_source_codes/All_source_codes/VarScope/: .cproject  .project
All_source_codes/All_source_codes/VarScope2/: .cproject  .project
All_source_codes/All_source_codes/VarScope3/: .cproject  .project
All_source_codes/All_source_codes/array/: .cproject
All_source_codes/All_source_codes/ascii_code/: .cproject  .project
All_source_codes/All_source_codes/bit_extraction/: .cproject
All_source_codes/All_source_codes/bitwise_shift/: .cproject  .project
All_source_codes/All_source_codes/clear_bit/: .cproject  .project
All_source_codes/All_source_codes/continue_break/: .cproject  .project
All_source_codes/All_source_codes/data_alignment/: .cproject
All_source_codes/All_source_codes/declaration/: .cproject  .project
All_source_codes/All_source_codes/distance/: .cproject  .project
All_source_codes/All_source_codes/float/: .cproject
All_source_codes/All_source_codes/serial_example/: CMakeLists.txt
All_source_codes/All_source_codes/serial_example/core/inc/: serial.h
All_source_codes/All_source_codes/serial_example/core/src/: main.c
All_source_codes/All_source_codes/serial_example/platform/: serial_windows.c
(+161 files in other folders)
